--- a/SangueAmigo2/src/main/java/view/Consultar.form
+++ b/SangueAmigo2/src/main/java/view/Consultar.form
@@ -88,6 +88,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txConsultar">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txConsultarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="BConsultar">
           <Properties>
